# cc-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
.github/workflows/: pr-checks.yml  prod-deploy.yml
data/: agents.csv  data_dictionary.docx  estate.csv  queues.csv
eval/: golden_qa.json  runner.py
infra/: azure_setup.sh  load_snowflake.py  set_secrets.sh  snowflake_setup.sql
src/agents/: analytics_agent.py  base.py  client_factory.py  dataset_agent.py  formatter.py  intent_agent.py  orchestrator.py  sql_agent.py  viz_agent.py
src/data/: db.py  dict_rag.py  loader.py  snowflake_loader.py
src/guardrails/: guardrails.py
src/llmops/: tracer.py
src/memory/: memory.py
src/tools/: sql_tools.py
tests/: test_base.py  test_dict_rag.py  test_intent_agent.py  test_loader.py  test_sql_tools.py
