[project]
name = "cc-chatbot"
version = "0.1.0"
description = "Contact Centre Analytics Chatbot — POC"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "openai>=1.50",
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "plotly>=5.18",
    "python-docx>=1.1",
    "tiktoken>=0.7",
    "pytest>=8.0",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]